removed comments from main text prior to upload

--- a/manuscript/coverletter.tex
+++ b/manuscript/coverletter.tex
@@ -30,7 +30,7 @@
 \fax{}
 \email{alyssa.cirtwill@liu.se}
 \url{http://cirtwill.github.io}
-\name{Alyssa R. Cirtwill}
+\name{Dr. Alyssa R. Cirtwill}
 
 \newcommand{\myjournal}{\emph{Ecology Letters}}
 
@@ -47,7 +47,7 @@
 
 \opening{Dear Prof. Coulson:}
 
-    My co-authors and I are pleased to submit the attached manuscript \emph{A quantitative framework for investigating the reliability of network construction} for consideration as a Novel Methods paper in \emph{Ecology Letters} as per our previous correspondence with Senior Editor John Drake. As instructed, we have submitted the manuscript under the Ideas \& Perspectives mechanism (and following the associated formatting guidelines).
+    My co-authors and I are pleased to submit the attached manuscript \emph{A quantitative framework for investigating the reliability of network construction} for consideration as a Novel Methods paper in \textbf{Ecology Letters} as per our previous correspondence with Senior Editor John Drake. As instructed, we have submitted the manuscript under the Ideas \& Perspectives mechanism (and following the associated formatting guidelines).
 
 
     We begin the manuscript by reviewing the many sources of variation inherent in ecological networks. Some sources of variation can be reduced through improved sampling, but others are intrinsic properties of ecological communities. This uncertainty limits the accuracy of network studies which consider communities as static, invariant entities and demonstrates the need for descriptions of network structure that acknowledge and address the uncertainty surrounding estimates of interspecific interactions.
@@ -59,7 +59,7 @@
     The present work is outstandingly novel relative to the recent work by one of the authors (Tomas Roslin) cited in this manuscript. Kopelke \emph{et al.} (2017) is the data paper describing the \emph{Salix}-galler-parasitoid system used for the quantitative analyses in the present work. Kopelke \emph{et al.} (2017) does not contain any analyses and so does not affect the novelty of the present work in any way.
 
 
-    We appreciate the chance to submit one of the first Novel Methods papers at \emph{Ecology Letters}. We are confident that the fundamental conceptual shift implied by our approach, accompanied by clear examples and easy-to-use scripts, can achieve the high standard you are looking for. We hope that you agree and eagerly await your reply.
+    We appreciate the chance to submit one of the first Novel Methods papers at \textbf{Ecology Letters}. We are confident that the fundamental conceptual shift implied by our approach, accompanied by clear examples and easy-to-use scripts, can achieve the high standard you are looking for. We hope that you agree and eagerly await your reply.
 
 
 \closing{Best regards,}
@@ -70,5 +70,8 @@
 
 
 % Suggested reviewers:
+
+% Pedro Jordano pedroj@me.com Estacion Biologica de Donana CSIC
+% Phillip Staniczenko pstaniczenko@sesync.org National Socio-Environmental Synthesis Center (SESYNC) 
 
 
