--- a/manuscript/supplemental.tex
+++ b/manuscript/supplemental.tex
@@ -200,8 +200,8 @@ alyssa.cirtwill@gmail.com\\
       \vspace{4pt}
       \noindent \hspace{2pt}\# And for the galler-parasitoid web:\\
       \noindent \hspace{2pt}deg\_dist\_parasitoid=rowSums(prior\_web\_para\_only)/ncol(prior\_web\_para\_only)\\
-      \noindent \hspace{2pt}deg\_dist\_parasitized=colSums(prior\_web\_para\_only)/nrow(prior\_web\_para\_only)\\
-      \noindent \hspace{2pt}gp\_int\_probs=as.numeric(deg\_dist\_parasitized\%$*$\%t(deg\_dist\_parasitoid))\\
+      \noindent \hspace{2pt}deg\_dist\_parasitised=colSums(prior\_web\_para\_only)/nrow(prior\_web\_para\_only)\\
+      \noindent \hspace{2pt}gp\_int\_probs=as.numeric(deg\_dist\_parasitised\%$*$\%t(deg\_dist\_parasitoid))\\
       \end{em}
 
 
@@ -215,8 +215,8 @@ alyssa.cirtwill@gmail.com\\
       % sg_int_probs=as.numeric(deg_dist_galler%*%t(deg_dist_Salix))
 
       % deg_dist_parasitoid=rowSums(GP_web)/ncol(GP_web)
-      % deg_dist_parasitized=colSums(GP_web)/nrow(GP_web)
-      % gp_int_probs=as.numeric(deg_dist_parasitized%*%t(deg_dist_parasitoid))
+      % deg_dist_parasitised=colSums(GP_web)/nrow(GP_web)
+      % gp_int_probs=as.numeric(deg_dist_parasitised%*%t(deg_dist_parasitoid))
 
 
 \clearpage
